<resources>
    <string name="app_name">Cook and Go</string>
    <string name="title_recipe">Receitas</string>
    <string name="title_inventory">Ingredientes</string>
    <string name="title_perfil">Perfil</string>
    <string name="vegan">Vegetariano</string>
    <string name="medidas">Medidas</string>
    <string name="alergias">Alergias</string>
    <string name="nozes">Nozes</string>
    <string name="camarao">Camarão</string>
    <string name="leite">Leite</string>
    <string name="ovo">Ovo</string>
    <string name="peixe">Peixe</string>
    <string name="frutos">Frutos Secos</string>
    <string name="soja">Soja</string>
    <string name="teste">A M O G U S</string>
    <string name="save">Guardar</string>
    <string name="ing_qnt">Qnty</string>
    <string name="ing_changeBy">ChangeBy</string>
    <string name="toast_message">Por favor, insira uma quantidade a ser alterada</string>
    <string name="possofazer">Receitas que posso fazer</string>
    <string name="ordenarpor">Ordenar por:</string>
    <string name="arrowup">↑</string>
    <string name="arrowdown">↓</string>
    <string name="nome">Nome</string>
    <string name="tempo">Tempo</string>
    <string name="dif">Dificuldade</string>
    <string name="mostrar">Mostrar apenas:</string>
    <string name="carne">Carne</string>
    <string name="sobremesas">Sobremesas</string>
    <string name="facil">Fácil</string>
    <string name="medio">Médio</string>
    <string name="difi">Difícil</string>
    <string name="poucotempo">&#60; 20 mins</string>
    <string name="tempomedio">20–45 mins</string>
    <string name="muitotempo">>45 mins</string>
    <string name="guardar">Guardar</string>
    <string name="recipe_image">recipe image</string>
    <string name="fazer">Fazer</string>

</resources>