<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <TextView
        tools:ignore="MissingConstraints"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegan"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="61dp"
        android:textSize="10pt"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medidas"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="123dp"
        android:textSize="10pt"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alergias"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="193dp"
        android:textSize="10pt"
        tools:ignore="MissingConstraints" />

    <Switch
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="61dp" />

    <Switch
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml"
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="123dp" />

    <CheckBox
        tools:ignore="MissingConstraints"
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nozes"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="384dp" />

    <CheckBox
        tools:ignore="MissingConstraints"
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camarao"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="240dp" />

    <CheckBox
        tools:ignore="MissingConstraints"
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leite"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="336dp" />

    <CheckBox
        tools:ignore="MissingConstraints"
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ovo"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="432dp" />

    <CheckBox
        tools:ignore="MissingConstraints"
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peixe"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="480dp" />

    <CheckBox
        tools:ignore="MissingConstraints"
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frutos"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="288dp" />

    <CheckBox
        tools:ignore="MissingConstraints"
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soja"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="528dp" />

</androidx.constraintlayout.widget.ConstraintLayout>