<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recipes">

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.trueproject.ui.recipes.RecipesFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_ingredients"
        android:name="com.example.trueproject.ui.ingredients.IngredientsFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_ingredients" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.trueproject.ui.profile.ProfileFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_recipe"
        android:name="com.example.trueproject.ui.recipe.RecipeFragment"
        android:label="RecipeFragment"
        tools:layout="@layout/recipe"/>

</navigation>